--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "mson-zoo",
   "version": "1.0.1",
   "description": "Collection of MSON samples that can be used as a showcase or testing purposes",
-  "main": "samples/",
-  "lib": "samples/",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
