--- a/package.json
+++ b/package.json
@@ -15,6 +15,23 @@
     "samples"
   ],
   "author": "Apiary",
+  "contributors": [
+    {
+      "name": "František Hába",
+      "email": "frantisek@apiary.io",
+      "url": "http://www.frantisekhaba.com/"
+    },
+    {
+      "name": "Vincenzo Chianese",
+      "email": "vincenzo@apiary.io",
+      "url": "http://vncz.js.org/"
+    },
+    {
+      "name": "Daniel G. Taylor",
+      "email": "daniel@apiary.io",
+      "url": "http://programmer-art.org/"
+    }
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/apiaryio/mson-zoo/issues"
