Fix author in the ‘package.json’ file.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "mson",
     "samples"
   ],
-  "author": "Apiary",
+  "author": "Apiary Inc.",
   "contributors": [
     {
       "name": "František Hába",
